aad-hybrid-lab/Templates/NSGs.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "deploymentNumber": {
      "type": "string",
      "defaultValue": "1",
      "metadata": {
        "description": "When deploying the stack N times, define the instance - this will be appended to some resource names to avoid collisions."
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "vnet",
      "metadata": {
        "description": "Name of the virtual network for this deployment"
      }
    },
    "subnets": { "type": "array" }
  },
  "variables": {
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
    "adNSGName": "[concat('INT-AD', parameters('deploymentNumber'))]",
    "adSubnetName": "[concat('adSubnet', parameters('deploymentNumber'))]",
    "adsubnetrange": "[parameters('subnets')[0].properties.addressPrefix]",
    "adSubnetId": "[concat(variables('vnetID'),'/subnets/',variables ('adSubnetName'))]",
    "location": "[resourceGroup().location]"
  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('adNSGName')]",
      "location": "[variables('location')]",
      "tags": {
        "displayName": "adNSG"
      },
      "properties": {
        "securityRules": [
          {
                    "name": "internet_access",
                    "properties":{
                        "description": "internet_access for all items",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "*",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "Outbound"
                    }
          },
          {
                    "name": "internet_access",
                    "properties":{
                        "description": "internet_access for all items",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "*",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "inbound"
                    }
          },
          {
            "name": "allow_RDP_to_AD_Servers",
            "properties": {
              "description": "Allow RDP to AD Servers",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_SMTP",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "25",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 121,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_WINS",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "42",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 122,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_Repl",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "135",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 123,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_NetBIOS",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "137",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 124,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_netlogin",
            "properties": {
              "description": "Allow AD Communication - DFSN, NetBIOS Session, NetLogon",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "139",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 125,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_LDAP",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "389",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 126,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_LDAP_udp",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "389",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 127,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_LDAPS",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "636",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 128,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_LDAP_GC",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3268-3269",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 129,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_KRB",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "88",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_KRB_udp",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "88",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 131,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_DNS",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 132,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_DNS_udp",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 133,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_445",
            "properties": {
              "description": "Allow AD Communication - SMB, CIFS,SMB2, DFSN, LSARPC, NbtSS, NetLogonR, SamR, SrvSvc",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 134,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_445_udp",
            "properties": {
              "description": "Allow AD Communication - SMB, CIFS,SMB2, DFSN, LSARPC, NbtSS, NetLogonR, SamR, SrvSvc",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 135,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_SOAP",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "9389",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 136,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_DFSR",
            "properties": {
              "description": "Allow AD Communication - DFSR/Sysvol",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5722",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 137,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_KRB2",
            "properties": {
              "description": "Allow AD Communication - Kerberos change/set password",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "464",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 138,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_KRB2_udp",
            "properties": {
              "description": "Allow AD Communication - Kerberos change/set password",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "464",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 139,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_time",
            "properties": {
              "description": "Allow AD Communication - Windows Time Protocol",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "123",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_auth",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "137-138",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 141,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_ephemeral",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "49152-65535",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 142,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_AD_ephemeral_udp",
            "properties": {
              "description": "Allow AD Communication",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "49152-65535",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 143,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_WinRM_vNet",
            "properties": {
              "description": "Allow WinRM sessions within the vNet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985-5986",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('adSubnetRange')]",
              "access": "Allow",
              "priority": 198,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
